@@ -1,3 +1,6 @@
+2005-12-08  Jeroen T. Vermeulen <jtv@xs4all.nl>
+ configure.ac.in:
+  - New --with-std= option
 2005-11-28  Jeroen T. Vermeulen <jtv@xs4all.nl>
  configure.ac.in:
   - Added some gcc 4.x options to maintainer mode
